Correcting opacity on small media size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,12 @@ article section h2 {
     opacity: .5;
 }
 
+a span {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 .example:hover {
     opacity: 1;
 }
@@ -130,7 +136,6 @@ article section h2 {
     background-repeat: no-repeat;
 }
 
-
 footer {
     padding: 1rem;
     text-align: center;
@@ -150,7 +155,7 @@ footer {
     .example {
         flex: 1 0 auto;
         background-color: lightpink;
-        line-height: 100px;
+        line-height: 10rem;
         margin: .5rem;
         vertical-align: middle;
         text-align: center;
